@@ -36,6 +36,7 @@ All:
 - Add wxInt64 support to wxText{Input,Output}Stream (Alexander Bezzubikov).
 - Define wxOVERRIDE as override for supporting compilers (Thomas Goyne).
 - Allow specifying custom comparator for wxSortedArrayString (Catalin Raceanu).
+- Add wxDateTime::GetWeekBasedYear().
 
 Unix:
 
